duck/test/fail/spec_mismatch.duck
main = exit 0

f :: Int -> Int
g x = x
